--- a/개발도서/아주작은습관의힙.md
+++ b/개발도서/아주작은습관의힙.md
@@ -1,1 +1,132 @@
 # 아주 작은 습관의 힘
+1. 아주 작은 습관이 만드는 극적인 변화
+* 사소한 성과들의 총합 : 하고자 하는 것의 각 부분을 매우 미세하게 쪼개고 모든 부분에서 1가지씩만 추가하여 개선하라(1년동안 매일 1퍼센트씩 성장한다면 1년동안 37배의 성장을 할 수 있다. 반면 1퍼센트씩 매일 퇴보한다면 0에 수렴한다.)
+
+    * 결과 = 습관이 쌓인것, 시간은 성공과 실패 사이의 간격을 벌려놓는다. 시간은 성공이든 실패든 그것을 복리로 증가시킨다.
+
+    * 목표는 결과가 아닌 결과를 이끌어내는 시스템을 바꾸는것! 시스템을 바꾸는 습관에 집중해야한다.
+
+    * 목표를 세우는것이 아니라 시스템을 세우는것에 목적을 둔다.
+
+        <시스템을 바꾸는 법>
+        
+        * 정체성 중심의 습관을 세워야한다.
+    
+            [스스로 나는 원래 O O한 사람이야 라고 되뇌이면서 내가 원하는 정체성을 스스로에게 주입하라.]
+
+        * 내가 원하는 모습의 특정행동을 반복하라, 행동은 스스로 우리가 그러한 사람이라고 믿게 만드는 중요한 열쇠이다.
+
+        * 변화는 2가지 단계로 이뤄진다. (어떤 사림이 되고 싶은지 결정하라, 작은 성공들로 스스로 증명하라)
+
+        * 내가 되고자하는 모습을 그리고 그러한 사람들은 어떻게 행동할 것인가의 고민을 통해서 그렇게 바꿔가라
+
+        * 습관은 자유를 제한하는 것이 아니라 오히려 시간과의 싸움에서 이기게 하는 열쇠
+
+    * 좋은 습관을 만드는 방법
+        
+        1. 분명하게 만들어라
+        2. 매력적으로 만들어라
+        3. 하기 쉽게 만들어라
+        4. 만족스럽게 만들어라
+    
+    * 나쁜 습관 없애는 방법
+
+        1. 보이지 않게 만들어라
+        2. 매력적이지 않게 만들어라
+        3. 하기 어렵게 만들어라
+        4. 불만족스럽게 만들어라
+    
+    
+        
+
+2. 분명해야 달라진다.
+
+* 일상적으로 하는 습관들에 내가 원하는 습관을 엮어라
+
+    ex)
+
+    * 일어난다.
+    * 알람을 끈다
+    * 휴대전화를 확인한다.
+    * 욕실로 간다.
+    * 체중을 잰다 등등,,,
+
+* 나는 [언제] [어디서] [어떤 행동]을 할 것이다. 의 형식으로 진행한다.
+
+    ex)
+        
+    * 명상 : 나는 오전 7시에 주방에서 1분 동안 명상할 것이다.
+    * 공부 : 나는 저녁 6시에 내 방에서 20분 동안 ㅇㅇㅇ을 공부할 것이다.
+
+    TIP : 습관을 성공적으로 안착시키려면 실행할 수 있는 장소와 시간에 대해서 고민해야한다.
+        => 내가 현재 하고 있는 모든 습관들을 기록하여, 그 안에서 세울 수 있는 습관을 재 창조한다.
+
+    내가 만들고자 하는 습관을 내 주변에서 최대한 노출시켜라.
+
+    EX) 피아노를 잘 치고 싶다면, 바로 피아노를 칠 수 있는 환경을 만든다.
+        
+
+3. 매력적이어야 달라진다.
+
+    * 습관의 결과가 도파민이 자극될 수 있도록 한다.
+
+        ex ) 해야하는 일 => 하고자 하는 일
+
+        운동을 하고, ㅇㅇ를 해야지
+
+    * 해야한다. => 해내다 로 바꿔서 표현하라
+
+4. 쉬워야 달라진다.
+
+    * 습관은 시간이 아니라 횟수로 정해진다.
+
+        하루에도 수 차례반복하면 한순간에 습관화 할 수 있다.
+
+    * 터무니 없이 작게 만들어야한다.(최대 2분이 걸리는 습관으로 시작하라)
+
+        ex) 
+
+        * 매일밤 침대에 들기 전에 책을 읽어야지 x => 한페이지를 읽어야지
+        * 오늘은 요가를 해야지 x => 요가 매트를 깡아야지
+        * 수업시간에 공부해야지 x => 노트를 펼쳐야지
+        * 아침 조깅을 5키로미터 뛰어야지 x => 운동화 끈을 묶어야지
+
+
+
+
+5. 만족스러워야 달라진다.
+
+    * 즉각적인 피드백을 줄 수 있는 장치를 만들어라
+
+        ex) 클립통
+6. 최고의 습관은 어떻게 만들어지는가?
+
+    * 1년 반추 목록
+
+        1. 잘된일
+        2. 잘되지 않은일
+        3. 배운것
+
+    * 6개월 반추 목록
+
+        1. 인생과 일을 움직이는 핵심가치
+        2. 어떻게 해야 나답게 살고 일하는가?
+        3. 어떻게 하면 미래에 더 높은 기준을 세울 수 있는가?
+
+* 한가지의 정체성으로 자신을 묶어두지 말라. 
+
+    ex) 포인트가드나 회사 상급자를 연결시키면 어느날 그들이 사라졌을 때 우리는 방향을 잃고 난파될 것이다.
+    -폴 그레이엄-
+
+    ex) 
+
+    나는 운동선수야 -> 나는 정신적으로 강하고 육체적 도전을 사랑하는 사람이야
+
+    나는 군인이야 -> 나는 단련되고, 믿을 만하고, 팀에서 대단힌 일을 하는 사람이야.
+
+    나는 CEO야 -> 난 기초를 세우고 창조하는 사람이야.
+
+
+---
+# 습관은 100번이상 반복하면 체득되어 내것이 된다.
+
