--- a/Clean-Code/Tips/dict_if.ipynb
+++ b/Clean-Code/Tips/dict_if.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "8a4f36d6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### dict으로 분기하고 인자 넘겨주기!"
    ]
@@ -11,7 +15,11 @@
   {
    "cell_type": "markdown",
    "id": "8577df0e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "##### 테스트용 함수 생성"
    ]
@@ -19,7 +27,11 @@
   {
    "cell_type": "markdown",
    "id": "1281b353",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "def test(args):\n",
     "    print(f'args - {type(args)} value - {args}')"
@@ -28,7 +40,11 @@
   {
    "cell_type": "markdown",
    "id": "5117f300",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### 테스트용 분기 dict 생성 - Enum의 개념"
    ]
@@ -37,7 +53,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "ce9dca21",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "test_dict =  {\n",
@@ -48,7 +68,11 @@
   {
    "cell_type": "markdown",
    "id": "95f20ab1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "#### 키값을 넣어주고 -> ('test')(넣어주고싶은 인자!) 를 넣어주면 dict 분기 시 인자를 넘겨줄 수 있음"
    ]
@@ -57,7 +81,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "885b2382",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -75,7 +103,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "5e7bf982",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "my_dict = {\n",
@@ -91,7 +123,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "9c2bdca7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
